syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.auth.servicegrpc";
option java_outer_classname = "UserProto";

package user;

service UserService {
  rpc GetUser (UserRequest) returns (UserResponse);
}

message UserRequest {
  int64 id = 1;
}

message UserResponse {
  int32 id = 1;
  string name = 2;
  string email = 3;
}
